<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:gravity="center">


    <ImageView
        android:id="@+id/closePopupGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:elevation="5dp"
        android:layout_alignParentRight="true"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleCyanide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="General Information:"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Cyanide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="5sp"
                android:text="@string/Cyanide_popup"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/titleCyanideHealth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Health Issues:"

                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CyanideHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="5sp"
                android:text="@string/CyanideHealth_popup"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleCyanideSuggestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Suggestions:"

                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/CyanideSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="5sp"
                android:text="@string/CyanideSuggestion_popup"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cyacit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="20dp"
                android:text="NSW Health cited"
                android:textSize="10dp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
